--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
 		</ul>
 	</nav>
 	<section>
-		<h2>3 random audios</h2>
+		<h2> 3 random audios</h2>
 		<audio controls>
 			<source
-				src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"type="audio/mpeg">
+				src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"type="audio/mp3">
 			Your browser does not support the audio element.
 		</audio>
 		<br>
@@ -31,7 +31,7 @@
 		<br>
 		<audio controls>
 			<source
-				src=" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"type="audio/mpeg">
+				src=" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"type="audio/mp3">
 			Your browser does not support the audio element.
 		</audio>
 		</section>
