--- a/main.html
+++ b/main.html
@@ -18,20 +18,17 @@
 	<section>
 		<h2> 3 random audios</h2>
 		<audio controls
-				src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"
-				type="audio/mp3">
+				src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
 			Your browser does not support the audio element.
 		</audio>
-		<br>
+		<br><br>
 		<audio controls
-				src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
-				type="audio/ogg">
+				src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
 			Your browser does not support the audio element.
 		</audio>
-		<br>
+		<br><br>
 		<audio controls
-				src=" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"
-				type="audio/mp3">
+				src=" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
 			Your browser does not support the audio element.
 		</audio>
 		</section>
